Add paper and slide

--- a/index.html
+++ b/index.html
@@ -65,7 +65,25 @@
                   This is called Iterated Inversion System (IIS). It is easy to
                   parallelize and render images fast. It can be used to render
                   2-dimensional kissing Schottky groups and also 3-dimensional kissing
-                  Schottky groups.<br>3D examples may require high GPU power, so run these examples at your own risk.<br>Similar examples are also available on <a href="https://www.shadertoy.com/user/soma_arc">my Shadertoy page</a>. You can edit and run code easily. Some examples may run faster than running on my WebGL implementation.</p>
+              Schottky groups.<br>3D examples may require high GPU power, so run these examples at your own risk.<br>Similar examples are also available on <a href="https://www.shadertoy.com/user/soma_arc">my Shadertoy page</a>. You can edit and run code easily. Some examples may run faster than running on my WebGL implementation.</p>
+	    <h2 id="publication">Publication</h2>
+	    <ul>
+	      <li>
+		Kento Nakamura and Kazushi Ahara, A New Algorithm for Rendering Kissing Schottky Groups, Bridges Finland 2016 Short Papers
+		<ul>
+		  <li><a href="http://archive.bridgesmathart.org/2016/bridges2016-367.html">Paper</a></li>
+		  <li><a href="https://speakerdeck.com/soma_arc/a-new-algorithm-for-rendering-kissing-schottky-groups">Slide deck</a></li>
+		</ul>
+	      </li>
+	    </ul>
+	    <h2 id="relatedProject">Related Project</h2>
+	    <ul>
+	      <li>
+		<a href="https://github.com/soma-arc/SchottkyLink">SchottkyLink</a><br>
+		An interactive visualization system on a family of Kleinian groups based on Schottky groups
+	      </li>
+	    </ul>
+
             <h2 id="examples">Examples</h2>
             <h3 id="kissing-schottky">Kissing Schottky</h3>
             <p>This is basic kissing Schottky group composed by four circles.</p>
